# siq

./: .gitignore  Dockerfile  Makefile  README.md  class_performance_summary.md  generate_summary_images.py  pyproject.toml  r16_comparison.html  rank_of_ranks_and_srfbn_analysis.md  requirements.txt  setup.py  srfbn_fix_proposals.md  summary_results.html  test_crop.py  train_model_refinement.py
.github/workflows/: wheels.yml
docs/: generate_doc_images.py  generate_new_simulations.py  index.html  search.js  simulated_examples.html  siq.html
docs/siq/: get_data.html
scripts/: train_model_refinement.py
siq/: __init__.py  auto.py  blind_sr.py  espcn.py  get_data.py
siq_example_output/: siq_demo_model_training.csv  siq_demo_model_training_weights.csv
tests/: compare_models.py  export_legacy_keras_weights.py  inference.py  inference_seg.py  inference_seg_2.py  make_training_params.R  make_training_params_oneby.R  make_training_params_small.R  migrate_and_resave_models.py  restart_train.py  siq_train.py  siq_train2.py  siq_train_seg.py  test.py  test_compatibility.py  test_seg.py  train_model_refinement.py  train_params_oneby.csv  translate_models_to_keras3.py  verify_architecture_parity.py
tests/unit/: test_blind_sr_kitchen_sink.py  test_full.py  test_get_data_more.py  test_new_architectures.py  test_siq.py  test_siq_suite.py  test_train.py
