[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "siq"
version = "0.4.1"
description = "deep perceptual resampling and super resolution with antspyx"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache-2.0" }
authors = [
  { name = "Avants, Gosselin, Tustison, Reardon", email = "stnava@gmail.com" }
]
requires-python = ">=3.7"
keywords = ["super-resolution", "deep learning", "ants", "resampling", "neuroimaging"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/stnava/siq"

[tool.setuptools]
packages = ["siq"]
zip-safe = false
license-files = []
